# Markerless_Motion_Pose_Face_detection_tracking_and_3D_reconstruction

./: .gitignore  README.md
opencv_projects/: CMakeLists.txt
opencv_projects/resources/result_opencv_xml_yml_files/camera_calibration_and_3d_reconstruction/: camera_parameters.yml
opencv_projects/src/: camera_calibration.cpp  opencv_application_with_cmake_test.cpp  undistortion_image_with_camera_params.cpp  video_read_offline_online_opencv.cpp
